# testDjangoAssignment

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  pyproject.toml  pytest.ini  readme.md
src/images/: models.py  serializers.py  urls.py  views.py
src/images/migrations/: 0001_initial.py
src/images/templates/: image_uploading.html
src/images/tests/: helpers.py  unit.py
src/project/: settings.py  urls.py
